1.0-A18 ~ Componentes visuais